--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,10 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+.min-vh-75 {
+    min-height: 75vh;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.min-vh-10 {
+    min-height: 10vh;
 }
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.min-h-13 {
+    min-height: 13vh;
 }
