--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,16 @@
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+    background: rgb(245,239,179);
+    background: linear-gradient(45deg, rgba(245,239,179,1) 0%, rgba(255,174,0,1) 100%);
+    overflow: hidden;
+     padding: 0;
+    margin: 0;
+    font-family: Futura,Trebuchet MS,Arial,sans-serif; 
+}
+
 .min-vh-75 {
     min-height: 75vh;
 }
