--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,13 @@
-
 html,
 body {
     width: 100%;
     height: 100%;
-    background: rgb(245,239,179);
-    background: linear-gradient(45deg, rgba(245,239,179,1) 0%, rgba(255,174,0,1) 100%);
-    overflow: hidden;
-     padding: 0;
+    font-size: large;
+    font-weight: bolder;
+    color:#242038;
+    background: rgb(255,252,182);
+    background: linear-gradient(49deg, rgba(255,252,182,1) 0%, rgba(255,180,44,1) 100%);      
+    padding: 0;
     margin: 0;
     font-family: Futura,Trebuchet MS,Arial,sans-serif; 
 }
@@ -20,4 +21,34 @@ body {
 }
 .min-h-13 {
     min-height: 13vh;
+}
+
+.link {
+    color:#242038;
+    font-style: italic;
+    text-decoration: none;
+    font-weight: bold;
+}
+.link:hover {
+    color: black;
+    font-style: italic;
+    text-decoration: underline;
+}
+
+h2 {
+    font-weight: bolder;
+}
+
+p {
+    font-weight: bold;
+}
+
+.button {
+    padding: 10px;
+    border: solid #242038 1px;
+    box-shadow: 4px 4px 0px 0px black;
+}
+
+.button:hover {
+    box-shadow: 6px 6px 0px 0px black;
 }
